# ChangeLog for x11-drivers/ati-drivers
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-drivers/ati-drivers/ChangeLog,v 1.116 2008/04/18 12:54:51 lu_zero Exp $

  13 Apr 2008; Luca Barbato <lu_zero@gentoo.org> ati-drivers-8.471.3.ebuild:
  Remove old dep

  21 Mar 2008; Samuli Suominen <drac@gentoo.org> ati-drivers-8.471.3.ebuild:
  amd64 stable, tested with current stable gentoo-sources-2.6.24-r3 and HD2600
  PRO which didn't have any drivers in stable before this.

*ati-drivers-8.471.3 (13 Mar 2008)

  13 Mar 2008; Jeff Gardner <je_fro@gentoo.org>
  +files/8.471.3/ati-powermode-opt-path-2.patch,
  +ati-drivers-8.471.3.ebuild:
  Bump to latest. Thanks to James Le Cuirot, Paolo Pedroni, and Jory Pratt.

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

  03 Mar 2008; Jeff Gardner <je_fro@gentoo.org>
  ati-drivers-8.455.2-r1.ebuild:
  Add inputproto as dependency to fix bug 212202. Thanks to Matthias
  Wieding-Drewes

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> ati-drivers-8.34.8.ebuild,
  ati-drivers-8.35.5.ebuild, ati-drivers-8.36.5.ebuild,
  ati-drivers-8.37.6.ebuild, ati-drivers-8.37.6-r1.ebuild,
  ati-drivers-8.39.4.ebuild, ati-drivers-8.40.4.ebuild,
  ati-drivers-8.42.3.ebuild, ati-drivers-8.433.ebuild,
  ati-drivers-8.443.1-r1.ebuild, ati-drivers-8.452.ebuild,
  ati-drivers-8.455.2.ebuild, ati-drivers-8.455.2-r1.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  24 Feb 2008; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
  Update my email.

*ati-drivers-8.455.2-r1 (19 Feb 2008)

  19 Feb 2008; Jeff Gardner <je_fro@gentoo.org>
  +ati-drivers-8.455.2-r1.ebuild:
  Fix SRC_URI thanks to kroemmelbein on bug #210139

*ati-drivers-8.455.2 (17 Feb 2008)

  17 Feb 2008; Jeff Gardner <je_fro@gentoo.org>
  +files/8.455.2/ati-powermode-opt-path-2.patch,
  +ati-drivers-8.455.2.ebuild: